# nexhacks

./: README.md
compressor/: Makefile  main.py  pyproject.toml
compressor/chroma/: chroma.sqlite3
compressor/components/: analyzer.py  custom_compressor.py  logger.py  vector_store.py
compressor/logs/: compression_log_1768713079.json  compression_log_1768713339.json  compression_log_1768713384.json  compression_log_1768713450.json  compression_log_1768713491.json  compression_log_1768713537.json  compression_log_1768713623.json  compression_log_1768713744.json  compression_log_1768713882.json  compression_log_1768713955.json  compression_log_1768714008.json  compression_log_1768714107.json  compression_log_1768714887.json
compressor/tests/: test_vector_store.py
server/: Makefile  README.md  benchmark_compress.py  benchmark_request.py  main.py  pyproject.toml  test_browser_request.py
server/components/: api_handler.py
server/cosmos/: __init__.py  baselines.py  chunker.py  compressor.py  demo_data.py  embedder.py  evaluation.py  local_llm.py  longbench_compressor.py  longbench_eval.py  longbench_runbook.md  longbench_variants.py  quick_eval.py  scoring.py  token_client.py  types.py
server/data/: longbench_v2_10_under100k.jsonl  longbench_v2_five.jsonl  longbench_v2_five_under100k.jsonl  longbench_v2_one.jsonl
server/schemas/: compress.py  insight.py  market.py
server/scripts/: run_leval.py  run_longbench.py  run_longbenchvision.py
server/small_compress/: analyzer.py  custom_compressor.py  logger.py  vector_store.py
server/tests/: test_api.py  (+2 more)
(+33 files in other folders)
