[project]
name = "server"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.128.0",
    "pydantic>=2.12.5",
    "tokenc>=0.0.7",
    "requests>=2.32.0",
    "google-genai>=1.0.0",
    "Pillow>=10.0.0",
    "chromadb>=1.4.1",
]
